remove padding-block and min-height on .phone-display

--- a/src/index.scss
+++ b/src/index.scss
@@ -802,7 +802,7 @@ svg {
         box-shadow: inset 0px 0px 10px $dark-gray;
 
         .phone-display {
-          padding-block: 20vw;
+          // padding-block: 20vw;
           margin: clamp(10px, 1vw, 10px);
           
           .avatar {
