--- a/src/index.scss
+++ b/src/index.scss
@@ -181,7 +181,7 @@ svg {
   width: 100px;
   text-decoration: none;
   font-weight: 700;
-  font-size: clamp(0.75rem, 1vw, 1rem);
+  font-size: clamp(0.7rem, 1vw, 1rem);
   padding-block: clamp(8px, 1.25vw, 15px);
   padding-inline: clamp(15px, 2vw, 30px);
   margin-right: clamp(5px, 0.75vw, 15px);
@@ -311,7 +311,7 @@ svg {
       height: 100%;
     }
 
-    h2 {
+    .name {
       font-family: 'Kaushan Script', cursive;
       font-size: clamp(1.25rem, 2vw, 2rem);
       font-weight: 400;
@@ -799,15 +799,15 @@ svg {
 
         .phone-display {
           // padding-block: 20vw;
+          flex-direction: row;
+          align-items: center;
+          min-height: 100%;
           margin: clamp(10px, 1vw, 10px);
           
           .avatar {
-            width: 50%;
+            width: 40%;
             height: 100%;
-          }
-
-          h2 {
-            font-size: 10vw;
+            margin-right: 15px;
           }
         }
 
@@ -875,12 +875,12 @@ svg {
         }
 
         .control-buttons {
-          margin: 10vw;
+          margin: 8vw;
 
           svg {
-            width: 10vw;
+            width: 8vw;
             height: 100%;
-            padding-inline: 3vw;
+            padding-inline: 2.5vw;
           }
         }
       }
