--- a/src/index.scss
+++ b/src/index.scss
@@ -736,12 +736,12 @@ svg {
 
 .back-to-top-btn {
   position: fixed;
-  right: clamp(20px, 3vw, 50px);
-  bottom: clamp(20px, 3vw, 50px);
+  right: clamp(30px, 5vw, 75px);
+  bottom: clamp(30px, 5vw, 75px);
   color: $cherry;
   border: none;
   border-radius: 50%;
-  background: $cherry;
+  background: $dark-gray;
   width: 50px;
   height: 50px;
   
