--- a/src/index.scss
+++ b/src/index.scss
@@ -82,8 +82,6 @@ svg {
   text-decoration: none;
 }
 
-
-
 .menu-icon {
   position: absolute; 
   top: 0;
@@ -237,8 +235,12 @@ svg {
             margin-right: 5vw;
           }
 
+          .name {
+            font-size: clamp(1.5rem, 7vw, 3rem);
+          }
+
           .title {
-            font-size: clamp(0.75rem, 4vw, 3rem);
+            font-size: clamp(0.75rem, 3vw, 3rem);
             text-align: center;
           }
         }
@@ -326,6 +328,10 @@ svg {
       width: 75%;
       margin-inline: auto;
       padding: 5vw;
+
+      h1 {
+        font-size: 5vw;
+      }
     }
   }
 
@@ -346,10 +352,10 @@ svg {
   }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 800px) {
   .home-page {
     .home {
-      padding-block: clamp(100px, 10vw, 150px);
+      padding-block: clamp(100px, 12vw, 200px);
     }
   }
 }
