--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -14,9 +14,10 @@ $white: #FFFFFF;
 .footer {
   text-align: center;
   font-size: clamp(1rem, 2vw, 1rem);
+  line-height: 200%;
   margin-top: clamp(50px, 6vw, 100px);
-  margin-bottom: 20px;
-  padding-inline: 20px;
+  margin-bottom: 5vw;
+  padding-inline: clamp(10px, 5vw, 150px);
   
   .copyright {
     font-size: clamp(0.75rem, 1.5vw, 0.75rem);
